# uscis-visa-bulletin-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: ingest.yml
notebooks/: uscis_visa_bulletin_rag.ipynb
scripts/: download_pdfs.py  gcs_sync.py  ingest.py
src/qa/: qa_chain.py
ui/: app.py
